--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,60 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cura - Where AI Meets Empathy</title>
+    <title>Cura Medical Assistant</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <div class="app">
+    <div class="container">
         <div class="chat-container">
             <div class="chat-header">
-                <div class="branding">
-                    <div class="logo">
-                        <svg viewBox="0 0 36 36">
-                            <path d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" fill="none" stroke="currentColor" stroke-width="3" stroke-dasharray="75,100"/>
-                        </svg>
-                        <span class="logo-text">Cura</span>
-                    </div>
-                    <p class="tagline">Where AI Meets Empathy</p>
-                </div>
-                
-                <div class="header-actions">
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
-                        <svg class="sun-icon" viewBox="0 0 24 24" width="24" height="24">
-                            <path fill="currentColor" d="M12 18C8.68629 18 6 15.3137 6 12C6 8.68629 8.68629 6 12 6C15.3137 6 18 8.68629 18 12C18 15.3137 15.3137 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16ZM11 1H13V4H11V1ZM11 20H13V23H11V20ZM3.51472 4.92893L4.92893 3.51472L7.05025 5.63604L5.63604 7.05025L3.51472 4.92893ZM16.9497 18.364L18.364 16.9497L20.4853 19.0711L19.0711 20.4853L16.9497 18.364ZM19.0711 3.51472L20.4853 4.92893L18.364 7.05025L16.9497 5.63604L19.0711 3.51472ZM5.63604 16.9497L7.05025 18.364L4.92893 20.4853L3.51472 19.0711L5.63604 16.9497ZM23 11V13H20V11H23ZM4 11V13H1V11H4Z"/>
-                        </svg>
-                        <svg class="moon-icon" viewBox="0 0 24 24" width="24" height="24">
-                            <path fill="currentColor" d="M9.37,5.51C9.19,6.15,9.1,6.82,9.1,7.5c0,4.08,3.32,7.4,7.4,7.4c0.68,0,1.35-0.09,1.99-0.27C17.45,17.19,14.93,19,12,19 c-3.86,0-7-3.14-7-7C5,9.07,6.81,6.55,9.37,5.51z M12,3c-4.97,0-9,4.03-9,9s4.03,9,9,9s9-4.03,9-9c0-0.46-0.04-0.92-0.1-1.36 c-0.98,1.37-2.58,2.26-4.4,2.26c-2.98,0-5.4-2.42-5.4-5.4c0-1.81,0.89-3.42,2.26-4.4C12.92,3.04,12.46,3,12,3L12,3z"/>
-                        </svg>
-                    </button>
-                </div>
+                <h1>🩺 Cura Medical Assistant</h1>
             </div>
-
-            <div class="notice-container">
-                <div class="notice info">
-                    <span class="notice-icon">ℹ️</span>
-                    <span>For general health assistance only. Please consult a doctor for medical advice.</span>
-                </div>
-            </div>
-
-            <div id="messages" class="messages"></div>
-
-            <div class="input-wrapper">
-                <div class="input-container">
-                    <textarea id="user-input" rows="1" placeholder="Type your message..." maxlength="500"></textarea>
-                    <div class="input-actions">
-                        <span id="char-count" class="char-count">0/500</span>
-                        <button id="send-button" class="send-button" disabled>
-                            <span class="button-text">Send</span>
-                            <svg class="send-icon" viewBox="0 0 24 24" width="16" height="16">
-                                <path d="M2 21l21-9L2 3v7l15 2-15 2v7z" fill="currentColor"/>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
+            <div class="chat-messages" id="chatMessages"></div>
+            <div class="input-container">
+                <input type="text" id="messageInput" placeholder="Type your medical question..." autocomplete="off">
+                <button id="sendButton">
+                    <i class="fas fa-paper-plane"></i>
+                    Send
+                </button>
             </div>
         </div>
     </div>
