--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,27 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cura Medical Assistant</title>
+    <title>Cura - AI Medical Assistant</title>
+    <meta name="description" content="AI-powered medical assistant for healthcare information">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <div class="chat-container">
-            <div class="chat-header">
-                <h1>🩺 Cura Medical Assistant</h1>
-            </div>
-            <div class="chat-messages" id="chatMessages"></div>
-            <div class="input-container">
-                <input type="text" id="messageInput" placeholder="Type your medical question..." autocomplete="off">
-                <button id="sendButton">
+            <header class="chat-header">
+                <div class="header-left">
+                    <h1><i class="fas fa-stethoscope"></i> Cura</h1>
+                    <span class="status">AI Assistant Online</span>
+                </div>
+                <div class="header-actions">
+                    <button id="clearButton" class="action-button" title="Clear chat history">
+                        <i class="fas fa-trash-alt"></i>
+                        <span>Clear Chat</span>
+                    </button>
+                </div>
+            </header>
+            
+            <section class="chat-messages" id="chatMessages">
+                <!-- Messages will be inserted here -->
+            </section>
+
+            <footer class="input-container">
+                <input type="text" 
+                       id="messageInput" 
+                       placeholder="Ask your medical question..." 
+                       aria-label="Your message"
+                       autocomplete="off">
+                <span id="charCounter" class="char-counter">0/500</span>
+                <button id="sendButton" aria-label="Send message">
                     <i class="fas fa-paper-plane"></i>
-                    Send
                 </button>
-            </div>
+            </footer>
         </div>
-    </div>
+    </main>
     <script src="scripts.js"></script>
 </body>
 </html>
